# strongswan

./: .gitignore  .gitmodules  .travis.yml  build_all.sh  build_dependencies.sh  builddeps.sh  configure.ac  gen_api.sh  install_dep.sh  kiknos_build.sh
api/: Makefile.am  configure.ac  gen.sh  kiknos_api_wrapper.cc  kiknos_api_wrapper.h  ssipsec.proto
conf/: Makefile.am
conf/plugins/: kernel-vpp.opt  socket-vpp.opt
deb/: Makefile  sswan.files
deb/DEBIAN/: changelog  control  postinst  postrm  prerm
deb/sswan-vpp-test/DEBIAN/: changelog  control
scripts/: del-test-env.sh  dev-env.sh  run-test-env-v2.sh  run-test-env.sh  test.sh
src/libcharon/: Makefile.am
src/libcharon/plugins/kernel_netlink/: kernel_netlink_ipsec.c
src/libcharon/plugins/kernel_vpp/: Makefile.am  README.md  kernel_vpp_grpc.c  kernel_vpp_grpc.h  kernel_vpp_ipsec.c  kernel_vpp_ipsec.h  kernel_vpp_net.c  kernel_vpp_plugin.c  kernel_vpp_shared.c  kernel_vpp_shared.h
src/libcharon/plugins/socket_vpp/: Makefile.am  socket_vpp_socket.c
src/libcharon/sa/: ike_sa.c
src/tpm_loadpkcs12/: tpm_loadpkcs12.c
